Implement prestodb with coordinator and worker