@@ -1,9 +1,8 @@
 -server
--Xmx3G
+-Xmx16G
 -XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
 -XX:+UseGCOverheadLimit
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+ExitOnOutOfMemoryError
--Djdk.attach.allowAttachSelf=true
